# work-logging-system

./: .cursorignore  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: deploy.yml  keepalive.yml
config/: notion.env.example
deploy/: terraform.md
docs/: operations.md
infra/terraform/: README.md
infra/terraform/backends/: dev.hcl
infra/terraform/environments/dev/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/terraform/modules/aws_api_lambda/: main.tf  outputs.tf  variables.tf
scripts/: daily_logger.py  monthly_processor.py  weekly_processor.py
scripts/api/: app.py
scripts/utils/: claude_client.py  gemini_client.py  llm_client.py  notion_client.py  openai_client.py  prompts.py
tests/: test_api_daily.py  test_integration.py  test_monthly_processor.py  test_weekly_processor.py
